--- a/app/src/main/res/layout/viewholder_brand.xml
+++ b/app/src/main/res/layout/viewholder_brand.xml
@@ -15,8 +15,8 @@
         android:layout_weight="1"
         android:background="@drawable/grey_bg"
         android:padding="2dp"
-        android:src="@tools:sample/avatars"
-        tools:srcCompat="@drawable/grey_bg" />
+        android:src="@drawable/grey_bg"
+        />
 
     <TextView
         android:id="@+id/title"
