--- a/app/src/main/res/layout/activity_deleting.xml
+++ b/app/src/main/res/layout/activity_deleting.xml
@@ -6,4 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".DeletingActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="42dp"
+                    android:layout_height="41dp"
+                    android:src="@tools:sample/avatars"
+                    tools:srcCompat="@drawable/left_back" />
+
+                <ImageView
+                    android:id="@+id/imageView7"
+                    android:layout_width="47dp"
+                    android:layout_height="37dp"
+                    android:src="@tools:sample/avatars"
+                    tools:layout_editor_absoluteX="361dp"
+                    tools:layout_editor_absoluteY="2dp"
+                    tools:srcCompat="@drawable/heart" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
