--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,14 +55,14 @@
                     android:layout_width="42dp"
                     android:layout_height="42dp"
                     android:src="@tools:sample/avatars"
-                    tools:srcCompat="@android:drawable/ic_menu_search" />
+                    tools:srcCompat="@drawable/loupe" />
 
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="42dp"
                     android:layout_height="42dp"
                     android:src="@tools:sample/avatars"
-                    tools:srcCompat="@android:drawable/ic_popup_reminder" />
+                    tools:srcCompat="@drawable/notificationbell" />
             </LinearLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -194,6 +194,7 @@
                     android:id="@+id/viewPopular"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginStart="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
