--- a/app/src/main/res/layout/viewholder_color.xml
+++ b/app/src/main/res/layout/viewholder_color.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/pic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="4dp"
         android:scaleType="fitCenter"
         android:src="@tools:sample/avatars"
