--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -258,6 +258,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/cartBtn"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.2"
@@ -277,7 +278,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="Explorer"
+                android:text="Cart"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="10sp" />
@@ -303,7 +304,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="Explorer"
+                android:text="wishlist"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="10sp" />
@@ -329,7 +330,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="Explorer"
+                android:text="My Order"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="10sp" />
@@ -355,7 +356,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="Explorer"
+                android:text="Profile"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="10sp" />
