--- a/app/src/main/res/layout/activity_deleting.xml
+++ b/app/src/main/res/layout/activity_deleting.xml
@@ -29,6 +29,9 @@
                     android:layout_width="42dp"
                     android:layout_height="41dp"
 
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:srcCompat="@drawable/left_back" />
 
                 <ImageView
@@ -36,8 +39,9 @@
                     android:layout_width="47dp"
                     android:layout_height="37dp"
 
-                    tools:layout_editor_absoluteX="361dp"
-                    tools:layout_editor_absoluteY="2dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:srcCompat="@drawable/heart" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
