--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,21 +75,28 @@
                     style="?android:attr/progressBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:layout_editor_absoluteX="182dp"
-                    tools:layout_editor_absoluteY="66dp" />
+                    app:layout_constraintBottom_toBottomOf="@+id/viewPageSlider"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/viewPageSlider"
+                    app:layout_constraintTop_toTopOf="@+id/viewPageSlider" />
 
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/viewPageSlider"
-                    android:layout_width="match_parent"
-                    android:layout_height="160dp"
+                    android:layout_width="411dp"
+                    android:layout_height="159dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="4dp"
                     android:paddingStart="24dp"
                     android:paddingEnd="24dp"
-                    tools:layout_editor_absoluteY="10dp" />
+                    app:layout_constraintBottom_toTopOf="@+id/dotIndicator"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                     android:id="@+id/dotIndicator"
                     android:layout_width="176dp"
-                    android:layout_height="18dp"
+                    android:layout_height="0dp"
                     android:layout_marginTop="4dp"
                     android:visibility="gone"
                     app:dotsColor="@color/lightgrey"
@@ -98,7 +105,9 @@
                     app:dotsWidthFactor="2.5"
                     app:layout_constraintBaseline_toBottomOf="parent"
                     app:layout_constraintBaseline_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.617"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/viewPageSlider"
                     app:selectedDotColor="@color/purple"
