--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,18 +51,11 @@
                 </LinearLayout>
 
                 <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="42dp"
-                    android:layout_height="42dp"
-
-                    tools:srcCompat="@drawable/loupe" />
-
-                <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="42dp"
                     android:layout_height="42dp"
 
-                    tools:srcCompat="@drawable/notificationbell" />
+                    tools:srcCompat="@drawable/logobig" />
             </LinearLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -182,7 +175,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Recommendation"
+                    android:text="Avalible Items:"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -253,8 +246,7 @@
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="4dp"
-                android:src="@drawable/direction"
-                />
+                android:src="@drawable/direction" />
 
             <TextView
                 android:id="@+id/textView91"
@@ -300,6 +292,21 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/logomenu" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/wishlistBtn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.2"
+            android:orientation="vertical">
+
+            <ImageView
                 android:id="@+id/imageView43"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
@@ -313,31 +320,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:text="wishlist"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="10sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.2"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageView44"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="4dp"
-                android:src="@drawable/todolist" />
-
-            <TextView
-                android:id="@+id/textView95"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="My Order"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="10sp" />
