--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="purple">#6033ba</color>
+    <color name="purple">#757676</color>
     <color name="lightgrey">#e9e9e9</color>
     <color name="grey">#91919191</color>
     <color name="darkgrey">#616161</color>
